examples/aion-nginx/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aion-nginx
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
